--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   carousel_slider: ^4.2.1
   fluid_bottom_nav_bar: ^1.4.0
+  searchable_listview: ^2.12.0
 
 dev_dependencies:
   flutter_test:
